--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -1334,7 +1334,7 @@ d2lkdGggPSAxNxAyA
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="1936"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xBb-62-YZB">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2864.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2881.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="melanzana" translatesAutoresizingMaskIntoConstraints="NO" id="HuM-5a-GOW" userLabel="Cover">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="677.5"/>
@@ -1620,11 +1620,15 @@ EDE5OA
                                                             <rect key="frame" x="0.0" y="0.0" width="376" height="238"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
+                                                                <view tag="8" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nHu-hf-bIo">
+                                                                    <rect key="frame" x="9.5" y="6" width="357" height="226"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </view>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="caponata" translatesAutoresizingMaskIntoConstraints="NO" id="aXN-lp-S9D" userLabel="backroundImageView">
-                                                                    <rect key="frame" x="5.5" y="0.0" width="365" height="238"/>
+                                                                    <rect key="frame" x="9.5" y="6" width="357" height="226"/>
                                                                 </imageView>
                                                                 <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kOk-Kt-Nt1" customClass="GradientViewSecond" customModule="CookMania" customModuleProvider="target">
-                                                                    <rect key="frame" x="5.5" y="83.5" width="365" height="71"/>
+                                                                    <rect key="frame" x="9.5" y="87" width="357" height="67.5"/>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="topColor">
@@ -1659,7 +1663,7 @@ EDE5OA
                                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                         </textView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gay-OG-edr">
-                                                                            <rect key="frame" x="103" y="6" width="263.5" height="12"/>
+                                                                            <rect key="frame" x="101.5" y="6" width="263" height="12"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
@@ -1675,11 +1679,11 @@ EDE5OA
                                                                     </constraints>
                                                                 </view>
                                                                 <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Il6-rm-TZx" userLabel="profileImageShadowView">
-                                                                    <rect key="frame" x="20.5" y="106" width="71.5" height="71.5"/>
+                                                                    <rect key="frame" x="22.5" y="108" width="68" height="67.5"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </view>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oVK-pP-RXL" userLabel="profileImageView">
-                                                                    <rect key="frame" x="20.5" y="106" width="71.5" height="71.5"/>
+                                                                    <rect key="frame" x="22.5" y="108" width="68" height="67.5"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="oVK-pP-RXL" secondAttribute="height" multiplier="1:1" id="Taz-FM-YAI"/>
                                                                     </constraints>
@@ -1727,17 +1731,21 @@ EDE5OA
                                                             <constraint firstItem="Il6-rm-TZx" firstAttribute="centerX" secondItem="oVK-pP-RXL" secondAttribute="centerX" id="P2B-LV-Dtg"/>
                                                             <constraint firstItem="UjV-4q-TpC" firstAttribute="leading" secondItem="Sfd-Ww-dSg" secondAttribute="leading" constant="2" id="Q3p-ps-civ"/>
                                                             <constraint firstItem="kOk-Kt-Nt1" firstAttribute="width" secondItem="aXN-lp-S9D" secondAttribute="width" id="Q6r-rN-WOv"/>
-                                                            <constraint firstItem="aXN-lp-S9D" firstAttribute="width" secondItem="hj8-ph-ct8" secondAttribute="width" multiplier="0.97" id="XN9-MO-Kcw"/>
+                                                            <constraint firstItem="aXN-lp-S9D" firstAttribute="width" secondItem="hj8-ph-ct8" secondAttribute="width" multiplier="0.95" id="XN9-MO-Kcw"/>
                                                             <constraint firstItem="Il6-rm-TZx" firstAttribute="centerY" secondItem="oVK-pP-RXL" secondAttribute="centerY" id="ZXI-H5-xJH"/>
                                                             <constraint firstItem="gay-OG-edr" firstAttribute="leading" secondItem="oVK-pP-RXL" secondAttribute="trailing" constant="11" id="ZaK-28-bq1"/>
+                                                            <constraint firstItem="nHu-hf-bIo" firstAttribute="centerY" secondItem="aXN-lp-S9D" secondAttribute="centerY" id="bD2-59-0Fk"/>
                                                             <constraint firstItem="kOk-Kt-Nt1" firstAttribute="height" secondItem="oVK-pP-RXL" secondAttribute="height" id="emx-QX-on9"/>
+                                                            <constraint firstItem="nHu-hf-bIo" firstAttribute="width" secondItem="aXN-lp-S9D" secondAttribute="width" id="fkW-bM-ZfU"/>
+                                                            <constraint firstItem="nHu-hf-bIo" firstAttribute="centerX" secondItem="aXN-lp-S9D" secondAttribute="centerX" id="ioT-wO-6Pq"/>
                                                             <constraint firstItem="UjV-4q-TpC" firstAttribute="centerY" secondItem="hj8-ph-ct8" secondAttribute="centerY" multiplier="1.15" id="j3e-kd-sKo"/>
                                                             <constraint firstItem="Sfd-Ww-dSg" firstAttribute="centerX" secondItem="hj8-ph-ct8" secondAttribute="centerX" multiplier="0.85" id="kXh-9t-Mkl"/>
                                                             <constraint firstItem="oVK-pP-RXL" firstAttribute="centerY" secondItem="hj8-ph-ct8" secondAttribute="centerY" multiplier="1.3" constant="-13.025000000000006" id="lgc-D4-UVH"/>
                                                             <constraint firstItem="oVK-pP-RXL" firstAttribute="centerX" secondItem="hj8-ph-ct8" secondAttribute="centerX" multiplier="0.3" id="oAy-59-Uo6"/>
                                                             <constraint firstItem="Sfd-Ww-dSg" firstAttribute="centerY" secondItem="hj8-ph-ct8" secondAttribute="centerY" multiplier="1.16" constant="-17.929999999999993" id="odz-2V-rFn"/>
-                                                            <constraint firstItem="aXN-lp-S9D" firstAttribute="height" secondItem="hj8-ph-ct8" secondAttribute="height" id="pFG-Hw-OXZ"/>
+                                                            <constraint firstItem="aXN-lp-S9D" firstAttribute="height" secondItem="hj8-ph-ct8" secondAttribute="height" multiplier="0.95" id="pFG-Hw-OXZ"/>
                                                             <constraint firstItem="aXN-lp-S9D" firstAttribute="centerY" secondItem="hj8-ph-ct8" secondAttribute="centerY" id="trb-b5-WyD"/>
+                                                            <constraint firstItem="nHu-hf-bIo" firstAttribute="height" secondItem="aXN-lp-S9D" secondAttribute="height" id="wK9-NI-JMA"/>
                                                             <constraint firstItem="gay-OG-edr" firstAttribute="centerY" secondItem="oVK-pP-RXL" secondAttribute="centerY" multiplier="1.18" id="wiR-P0-N5l"/>
                                                             <constraint firstItem="zeL-5b-GyF" firstAttribute="top" secondItem="kOk-Kt-Nt1" secondAttribute="bottom" constant="0.5" id="wtN-nY-l11"/>
                                                         </constraints>
@@ -1748,14 +1756,19 @@ EDE5OA
                                                     <outlet property="delegate" destination="oY8-TY-LDq" id="pC4-m5-hxb"/>
                                                 </connections>
                                             </collectionView>
+                                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="7ys-4I-67g">
+                                                <rect key="frame" x="168" y="2278.5" width="39" height="37"/>
+                                                <color key="pageIndicatorTintColor" red="0.89019607840000003" green="0.16078431369999999" blue="0.16078431369999999" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="currentPageIndicatorTintColor" red="0.89019607840000003" green="0.16078431369999999" blue="0.16078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            </pageControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Similar recipes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZq-wQ-att">
-                                                <rect key="frame" x="0.0" y="2308.5" width="135" height="23"/>
+                                                <rect key="frame" x="0.0" y="2325.5" width="135" height="23"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V7g-el-DuP">
-                                                <rect key="frame" x="0.0" y="2339.5" width="375" height="484"/>
+                                                <rect key="frame" x="0.0" y="2356.5" width="375" height="484"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="KOk-20-pjh">
                                                     <size key="itemSize" width="214" height="202.5"/>
@@ -1992,6 +2005,7 @@ EDE5OA
                                             <constraint firstItem="Ftk-zP-oyo" firstAttribute="leading" secondItem="kzZ-FT-gTu" secondAttribute="leading" id="6we-hq-Mm0"/>
                                             <constraint firstItem="qH8-f5-jCT" firstAttribute="leading" secondItem="kzZ-FT-gTu" secondAttribute="leading" id="7cL-oW-Cpu"/>
                                             <constraint firstAttribute="trailing" secondItem="HuM-5a-GOW" secondAttribute="trailing" id="9Fk-0s-iBB"/>
+                                            <constraint firstItem="zpr-IB-e6y" firstAttribute="bottom" secondItem="7ys-4I-67g" secondAttribute="top" id="9YH-JQ-864"/>
                                             <constraint firstItem="Ive-Pw-fhZ" firstAttribute="trailing" secondItem="kzZ-FT-gTu" secondAttribute="trailing" id="BMl-Vc-feo"/>
                                             <constraint firstItem="rZq-wQ-att" firstAttribute="leading" secondItem="kzZ-FT-gTu" secondAttribute="leading" id="BcE-Or-WfG"/>
                                             <constraint firstItem="qB9-Uj-hh6" firstAttribute="top" secondItem="ZSg-jO-NPU" secondAttribute="bottom" constant="8" id="Bhf-Z9-sAr"/>
@@ -2001,7 +2015,7 @@ EDE5OA
                                             <constraint firstItem="zpr-IB-e6y" firstAttribute="top" secondItem="VMK-HO-58M" secondAttribute="bottom" constant="24" id="Eze-c4-hux"/>
                                             <constraint firstItem="695-Dd-neT" firstAttribute="top" secondItem="qB9-Uj-hh6" secondAttribute="bottom" constant="27.5" id="Ie0-8f-ikG"/>
                                             <constraint firstItem="eAC-yX-RlQ" firstAttribute="centerY" secondItem="kzZ-FT-gTu" secondAttribute="centerY" multiplier="1.3" id="JVA-uS-O0N"/>
-                                            <constraint firstItem="rZq-wQ-att" firstAttribute="top" secondItem="zpr-IB-e6y" secondAttribute="bottom" constant="30" id="KH8-4y-HVH"/>
+                                            <constraint firstItem="rZq-wQ-att" firstAttribute="top" secondItem="7ys-4I-67g" secondAttribute="bottom" constant="10" id="KH8-4y-HVH"/>
                                             <constraint firstItem="eAC-yX-RlQ" firstAttribute="centerX" secondItem="kzZ-FT-gTu" secondAttribute="centerX" id="Krv-Y4-Yfy"/>
                                             <constraint firstItem="VMK-HO-58M" firstAttribute="top" secondItem="695-Dd-neT" secondAttribute="bottom" constant="7" id="LSl-Ec-LSl"/>
                                             <constraint firstAttribute="trailing" secondItem="V7g-el-DuP" secondAttribute="trailing" id="MBq-R1-Lcd"/>
@@ -2017,6 +2031,7 @@ EDE5OA
                                             <constraint firstItem="8Ss-8W-i5n" firstAttribute="centerY" secondItem="kzZ-FT-gTu" secondAttribute="centerY" multiplier="1.1" id="Xf7-7O-Ga3"/>
                                             <constraint firstItem="Ftk-zP-oyo" firstAttribute="centerY" secondItem="kzZ-FT-gTu" secondAttribute="centerY" multiplier="0.95" id="Yp3-6C-qKb"/>
                                             <constraint firstItem="e0z-RS-t4U" firstAttribute="top" secondItem="qH8-f5-jCT" secondAttribute="bottom" constant="8" id="bHA-go-4XB"/>
+                                            <constraint firstItem="7ys-4I-67g" firstAttribute="centerX" secondItem="zpr-IB-e6y" secondAttribute="centerX" id="bIm-KI-rVc"/>
                                             <constraint firstItem="ZSg-jO-NPU" firstAttribute="leading" secondItem="kzZ-FT-gTu" secondAttribute="leading" id="cuY-Kn-sQm"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZSg-jO-NPU" secondAttribute="trailing" constant="20" symbolic="YES" id="dqC-yu-mlr"/>
                                             <constraint firstItem="qB9-Uj-hh6" firstAttribute="leading" secondItem="xBb-62-YZB" secondAttribute="leading" id="eCz-Bt-TAH"/>
@@ -2078,6 +2093,7 @@ EDE5OA
                         <outlet property="caloriesValueLabel" destination="msN-3D-JlP" id="HnQ-Jn-Fiz"/>
                         <outlet property="contentView" destination="xBb-62-YZB" id="i0D-3M-w8O"/>
                         <outlet property="experiencesCollectionView" destination="zpr-IB-e6y" id="6QH-zY-unX"/>
+                        <outlet property="experiencesPageController" destination="7ys-4I-67g" id="jxW-Ft-4VJ"/>
                         <outlet property="ingredientsLabel" destination="qH8-f5-jCT" id="Jmb-Tp-tph"/>
                         <outlet property="ingredientsStack" destination="DR1-OG-VNm" id="mTL-iz-l9e"/>
                         <outlet property="ingredientsTableView" destination="e0z-RS-t4U" id="zsE-4x-E6q"/>
@@ -3212,7 +3228,7 @@ EDE5OA
         <image name="views" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="wZK-c4-X4h"/>
+        <segue reference="3Hv-pz-kTR"/>
         <segue reference="kdF-uh-brg"/>
         <segue reference="di5-D0-Hv1"/>
     </inferredMetricsTieBreakers>
